--- a/app/stylesheets/variables.scss
+++ b/app/stylesheets/variables.scss
@@ -1,4 +1,5 @@
 $light-grey: #d0d0d0;
+$grey: #ccc;
 $chocolate: #886767;
 $dark-chocolate: #665555;
 $shallow-box-shadow: 0 2px 5px rgba(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.24);
